[tool.poetry]
name = "program"
version = "0.2.1"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
{include='incolume', from=''}
]

[tool.poetry.scripts]
program = 'incolume.py.program.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
toml = {extras = ["tomli"], version = "^0.10.2"}
program-core = {git = "https://github.com/incolumepy-prospections/incolume.py.program-core.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
